tests/ui/ast_head_literal.stderr
error[E0506]: cannot assign to `lit` because it is borrowed
 --> $DIR/ast_head_literal.rs:8:5
  |
7 |     let hlit = ast::HeadLiteral::from(&lit);
  |                                       ---- borrow of `lit` occurs here
8 |     lit = ast::Literal::from_term(ast::Sign::NoSign, &term);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `lit` occurs here
9 |     let _end = (lit, hlit);
  |                      ---- borrow later used here
